--- a/index.html
+++ b/index.html
@@ -21,26 +21,33 @@
       <div>
         <img src="./img/avatar.jpg" />
       </div>
-      <h1>Jose María Rodríguez <br /><hr> // SOC Analyst - Cybersecurity Analyst //</h1>
+      <h1>
+        Jose María Rodríguez <br />
+        <hr />
+        // SOC Analyst - Cybersecurity Analyst //
+      </h1>
       <section>
         <p>
-          Hola! Soy Jose. Bienvenido a mi cv online, que iré actualizando según vaya adquiriendo más
-          experiencia y conocimientos. <br />
+          Hola! Soy Jose. Bienvenido a mi cv online, que iré actualizando según
+          vaya adquiriendo más experiencia y conocimientos. <br />
           Empecé en serio en este fascinante mundo en enero de 2023 gracias a
           Cisco Networking Academy, un recurso gratuito que siempre recomendaré.
           <br />
           Desde entonces no he parado de estudiar y aprender con la ayuda de
           otros como Cybrary, TryHackMe, ISC2... <br />
           Esta web hecha con mis conocimientos en programación está en
-          evolucionando, le dedico más tiempo a formarme que a actualizarla,
-          por eso aún está "en construcción...", disculpen las molestias. 😅
+          evolucionando, le dedico más tiempo a formarme que a actualizarla, por
+          eso aún está "en construcción...", disculpen las molestias. 😅
         </p>
 
         <a href="https://github.com/JoseGeek78/" target="_blank">
           <i class="fab fa-github-alt"></i>
         </a>
 
-        <a href="https://www.linkedin.com/in/jose-maria-rodriguez-mu%C3%B1oz/" target="_blank">
+        <a
+          href="https://www.linkedin.com/in/jose-maria-rodriguez-mu%C3%B1oz/"
+          target="_blank"
+        >
           <i class="fab fa-linkedin-in"></i>
         </a>
       </section>
@@ -51,39 +58,51 @@
         <article class="course">
           <div class="title">
             <h4>
-              Analista Junior en Ciberseguridad <br />// Cisco Networking Academy
+              Analista Junior en Ciberseguridad <br />// Cisco Networking
+              Academy <br />- 120 Horas -
             </h4>
           </div>
           <div class="descrition">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-              laudantium. Eveniet veniam repellat eos vero. Nisi consequatur
-              similique earum pppnulla optio, magnam impedit temporibus eos
-              vitae, eum voluptatem. Praesentium, quia!
+              Conceptos básicos de seguridad de red, seguridad del sistema
+              operativo y seguridad de terminales, así como también técnicas
+              para monitorear y proteger la red, incluidos el control de acceso,
+              los firewalls, la seguridad en la nube y la criptografía. Evaluar
+              y responder a las alertas de seguridad, las políticas y la gestión
+              de ciberseguridad para garantizar que una organización cumpla con
+              los estándares de ética y los marcos legales y reglamentarios.
+              Además, habilidades para realizar una evaluación de
+              vulnerabilidades de la red y crear un plan de administración de
+              riesgos, así como una respuesta posterior al incidente, incluidas
+              las investigaciones forenses, los métodos de recuperación y la
+              planificación de la respuesta ante los incidentes.
             </p>
           </div>
         </article>
         <article class="course">
           <div class="title">
-            <h4>SOC Analyst Level 1 <br />// TryHackMe [Top 3% TryHackMe]</h4>
+            <h4>
+              SOC Analyst Level 1 <br />// TryHackMe [Top 3% TryHackMe] <br />-
+              56 Horas -
+            </h4>
           </div>
           <div class="descrition">
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente
-              laboriosam modi nemo alias ea veniam molestias aspernatur odio
-              minima quisquam quia iste inventore tempore, debitis sint
-              eligendi! Est, sit.
+              Monitorear e investigar alertas (24 horas al día, 7 días a la
+              semana) Configurar y administrar herramientas de seguridad
+              Desarrollar e implementar firmas IDS, etc.
             </p>
           </div>
           <div class="title">
-            <h4>SOC Analyst <br />// Cybrary</h4>
+            <h4>SOC Analyst <br />// Cybrary <br />- 60 Horas -</h4>
           </div>
           <div class="descrition">
             <p>
-              En Formación...Lorem ipsum dolor sit amet consectetur adipisicing
-              elit. Tenetur, laudantium. Eveniet veniam repellat eos vero. Nisi
-              consequatur similique earum pppnulla optio, magnam impedit
-              temporibus eos vitae, eum voluptatem. Praesentium, quia!
+              En Formación...Los analistas de SOC son la primera línea de las
+              operaciones de seguridad defensiva. Esta trayectoria profesional
+              está diseñada para brindarle el conocimiento fundamental y las
+              habilidades clave necesarias para tener éxito como analista de SOC
+              de nivel inicial.
             </p>
           </div>
         </article>
@@ -93,11 +112,16 @@
           </div>
           <div class="descrition">
             <p>
-              Preparando el examen...Lorem ipsum dolor sit amet consectetur,
-              adipisicing elit. Itaque corrupti voluptate culpa tempora
-              molestiae esse quidem, dicta reprehenderit samet cum impedit,
-              quas, reiciendis possimus doloribus eaqueee enim. Tempora,
-              possimus suscipit!
+              Preparando el examen...Reconocer la importancia de la seguridad y
+              la integridad de los datos e identificar las prácticas preferidas
+              para la autenticación, el cifrado y la seguridad de los
+              dispositivos. Dominar las habilidades prácticas y los
+              conocimientos más actualizados que los especialistas en
+              ciberseguridad utilizan en sus funciones diarias. Desarrollar un
+              conocimiento práctico de las diferentes amenazas a la seguridad,
+              brechas, malware, ingeniería social y otros vectores de ataque.
+              Identificar los tipos de amenazas y ataques a la red (cibernética)
+              y aproveche las herramientas comunes para prevenir estas amenazas.
             </p>
           </div>
         </article>
@@ -118,15 +142,20 @@
         </article>
         <article class="course">
           <div class="title">
-            <h4>full Stack Developer <br /> // 4Geeks Academy</h4>
+            <h4>
+              full Stack Developer <br />
+              // 4Geeks Academy <br />- 18 semanas -
+            </h4>
           </div>
           <div class="descrition">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-              necessitatifacere, explicab ipsam maxime impedit voluptate Lorem
-              ipsum dolor, amet consectetur quas, ex consectetur distinci
-              deserunt sequi ratione delectus cumque. holi accusantium, itaque
-              minus cum! Laboriosam reiciendis max saepe voluptatum!
+              En este Bootcamp aprendí a crear un sitio web sumergiéndote en las
+              mejores prácticas del diseño web responsive, trabajando con
+              diversos lenguajes. Obtuve una sólida base de frontend, backend,
+              base de datos, manejo de procesos distribuidos y despliegue en
+              plataformas web. Al finalizar este programa, cuento con los
+              conocimientos para incorporarte al sector tecnológico como Full
+              Stack Developer.
             </p>
           </div>
         </article>
@@ -137,10 +166,10 @@
           <div class="column">
             <h4>Good knowledge</h4>
             <ul>
-              <li>Python</li>
-              <li>JavaScript</li>
-              <li>HTML5</li>
-              <li>CSS</li>
+              <li>-----</li>
+              <li>-----</li>
+              <li>-----</li>
+              <li>-----</li>
             </ul>
           </div>
           <div class="column">
