--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
           <div class="column">
             <h4>Basic knowledge</h4>
             <ul>
-              <li>SQL</li>
-              <li>NodeJS</li>
-              <li>MongoDB</li>
-              <li>Django</li>
+              <li>-----</li>
+              <li>-----</li>
+              <li>-----</li>
+              <li>-----</li>
             </ul>
           </div>
           <div>
@@ -193,16 +193,16 @@
         <h3>Education</h3>
         <article>
           <div class="school">
-            <span>2015-2018</span> <strong>Octocats tech academy</strong>
+            <span>2015-2018</span> <strong>-----</strong>
           </div>
-          <div class="descrition">Bechelor Degree of Octorobotics</div>
+          <div class="descrition">-----</div>
         </article>
         <article>
           <div class="school">
             <span>2012-2015</span>
-            <strong>Kittens high school</strong>
+            <strong>-----</strong>
           </div>
-          <div>Main subject: Cathemathics</div>
+          <div>-----</div>
         </article>
       </section>
       <section>
@@ -211,19 +211,18 @@
           <div class="job-title">
             <span>03.2023 - 06.2023</span> <strong>Company Company</strong
             ><br />
-            <strong>Position:</strong> Web developer Intern
+            <strong>Position:</strong> -----
           </div>
           <div>
             <p>
               <strong>Tech stack:</strong> HTML5 / CSS / JavaScript / jQuery
             </p>
             <ul class="job-description">
-              <li>Develop web application for Octopoda departments</li>
+              <li>-----</li>
               <li>
-                Implement UI (front-end site) based received graphic design and
-                requirements
+                -----
               </li>
-              <li>Co-operate back-end team</li>
+              <li>-----</li>
             </ul>
           </div>
         </article>
@@ -231,7 +230,7 @@
     </main>
     <footer>
       <p>
-        Created by: <a href="https://www.flynerd.pl/">JoseGeek</a> /
+        Created by: <a>JoseGeek</a> /
         <a href="https://www.linkedin.com/in/jose-maria-rodriguez-muñoz/"
           >LinkedIn</a
         >
