--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <h3>Education</h3>
         <article>
           <div class="school">
-            <span>2015-2018</span> <strong>-----</strong>
+            <span>2015-2018</span> <strong>Cybrary</strong>
           </div>
           <div class="descrition">-----</div>
         </article>
