--- a/index.html
+++ b/index.html
@@ -193,14 +193,14 @@
         <h3>Education</h3>
         <article>
           <div class="school">
-            <span>2015-2018</span> <strong>Cybrary</strong>
+            <span>2023...</span> <strong>Cybrary</strong>
           </div>
           <div class="descrition">-----</div>
         </article>
         <article>
           <div class="school">
-            <span>2012-2015</span>
-            <strong>-----</strong>
+            <span>2023...</span>
+            <strong>TryHackMe</strong>
           </div>
           <div>-----</div>
         </article>
