--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
             </p>
           </div>
           <div class="title">
-            <h4>SOC Analyst <br />// Cybrary <br />- 60 Horas -</h4>
+            <h4>SOC Analyst L2<br />// Cybrary <br />- 110 Horas -</h4>
           </div>
           <div class="descrition">
             <p>
-              En Formación...Los analistas de SOC son la primera línea de las
+              Los analistas de SOC son la primera línea de las
               operaciones de seguridad defensiva. Esta trayectoria profesional
-              está diseñada para brindarle el conocimiento fundamental y las
+              está diseñada para brindar el conocimiento fundamental y las
               habilidades clave necesarias para tener éxito como analista de SOC
               de nivel inicial.
             </p>
