--- a/index.html
+++ b/index.html
@@ -108,20 +108,16 @@
         </article>
         <article class="course">
           <div class="title">
-            <h4>Certified in Cybersecurity <br />// ISC2</h4>
+            <h4>Blue Team Junior Analyst Certificate <br />// Security Blue Team</h4>
           </div>
           <div class="descrition">
             <p>
-              Preparando el examen...Reconocer la importancia de la seguridad y
-              la integridad de los datos e identificar las prácticas preferidas
-              para la autenticación, el cifrado y la seguridad de los
-              dispositivos. Dominar las habilidades prácticas y los
-              conocimientos más actualizados que los especialistas en
-              ciberseguridad utilizan en sus funciones diarias. Desarrollar un
-              conocimiento práctico de las diferentes amenazas a la seguridad,
-              brechas, malware, ingeniería social y otros vectores de ataque.
-              Identificar los tipos de amenazas y ataques a la red (cibernética)
-              y aproveche las herramientas comunes para prevenir estas amenazas.
+              Introducción a la ciencia forense digital.
+              Introducción a OSINT.
+              Introducción a la gestión de vulnerabilidades.
+              Introducción a la búsqueda de amenazas.
+              Introducción al análisis de redes.
+              Introducción a las operaciones en la Dark Web.
             </p>
           </div>
         </article>
