--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           Cisco Networking Academy, un recurso gratuito que siempre recomendaré.
           <br />
           Desde entonces no he parado de estudiar y aprender con la ayuda de
-          otros como Cybrary, TryHackMe, ISC2... <br />
+          otros como Cisco, Cybrary, TryHackMe, Security Blue Team, Hack The Box... <br />
           Esta web hecha con mis conocimientos en programación está en
           evolucionando, le dedico más tiempo a formarme que a actualizarla, por
           eso aún está "en construcción...", disculpen las molestias. 😅
