--- a/index.html
+++ b/index.html
@@ -112,12 +112,7 @@
           </div>
           <div class="descrition">
             <p>
-              Introducción a la ciencia forense digital.
-              Introducción a OSINT.
-              Introducción a la gestión de vulnerabilidades.
-              Introducción a la búsqueda de amenazas.
-              Introducción al análisis de redes.
-              Introducción a las operaciones en la Dark Web.
+              Introducción a la ciencia forense digital. OSINT. Gestión de vulnerabilidades. Búsqueda de amenazas. Análisis de redes. Operaciones en la Dark Web.
             </p>
           </div>
         </article>
