--- a/index.html
+++ b/index.html
@@ -189,6 +189,11 @@
           <div class="descrition">-----</div>
         </article>
         <article>
+            <span>2023...</span> <strong>Cybrary</strong>
+          </div>
+          <div class="descrition">-----</div>
+        </article>
+        <article>
           <div class="school">
             <span>2023...</span>
             <strong>TryHackMe</strong>
