--- a/index.html
+++ b/index.html
@@ -184,22 +184,28 @@
         <h3>Education</h3>
         <article>
           <div class="school">
-            <span>2023...</span> <strong>Cybrary</strong>
-          </div>
-          <div class="descrition">-----</div>
-        </article>
-        <article>
-            <span>2023...</span> <strong>Cybrary</strong>
+            <span>2023...</span> <strong>Cisco</strong>
           </div>
           <div class="descrition">-----</div>
         </article>
         <article>
           <div class="school">
-            <span>2023...</span>
-            <strong>TryHackMe</strong>
+            <span>2023...</span> <strong>TryHackMe</strong>
           </div>
-          <div>-----</div>
+          <div class="descrition">-----</div>
         </article>
+        <article>
+            <span>2024...</span> <strong>Cybrary</strong>
+          </div>
+          <div class="descrition">-----</div>
+        </article>
+        <article>
+          <div class="school">
+            <span>2024...</span> <strong>Security Blue Team</strong>
+          </div>
+          <div class="descrition">-----</div>
+        </article>
+        
       </section>
       <section>
         <h3>Experience</h3>
