--- a/index.html
+++ b/index.html
@@ -205,7 +205,12 @@
           </div>
           <div class="descrition">-----</div>
         </article>
-        
+        <article>
+          <div class="school">
+            <span>2023...</span> <strong>Hack The Box</strong>
+          </div>
+          <div class="descrition">-----</div>
+        </article>
       </section>
       <section>
         <h3>Experience</h3>
